fix margin off-centering icons

--- a/css/inner/dashboard.less
+++ b/css/inner/dashboard.less
@@ -251,7 +251,7 @@
       transition-duration: color .2s ease-in-out;
       display: inline-block;
       .box-sizing(border-box);
-      margin-right: -4px;
+      margin-left: -4px;
       width: 20%;
       &:not(.running):hover {
         text-decoration: none;
